[gd_scene load_steps=4 format=2]

[ext_resource path="res://basic_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/font_setting_button_group.tres" type="ButtonGroup" id=2]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=3]

[node name="Settings" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="Center" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="pCon" type="PanelContainer" parent="CanvasLayer/Control/Center"]
margin_left = 449.0
margin_top = 222.0
margin_right = 574.0
margin_bottom = 377.0

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control/Center/pCon"]
margin_left = 7.0
margin_top = 7.0
margin_right = 118.0
margin_bottom = 148.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Center/pCon/VBox"]
margin_right = 111.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="CanvasLayer/Control/Center/pCon/VBox/HBoxContainer"]
margin_top = 3.0
margin_right = 57.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="CanvasLayer/Control/Center/pCon/VBox/HBoxContainer"]
margin_left = 61.0
margin_right = 111.0
margin_bottom = 25.0
text = "Back"

[node name="Label" type="Label" parent="CanvasLayer/Control/Center/pCon/VBox"]
margin_top = 29.0
margin_right = 111.0
margin_bottom = 48.0
text = "Font:"

[node name="StayPuft" type="CheckBox" parent="CanvasLayer/Control/Center/pCon/VBox"]
margin_top = 52.0
margin_right = 111.0
margin_bottom = 79.0
pressed = true
group = ExtResource( 2 )
text = "Stay Puft"

[node name="OpenSans" type="CheckBox" parent="CanvasLayer/Control/Center/pCon/VBox"]
margin_top = 83.0
margin_right = 111.0
margin_bottom = 110.0
group = ExtResource( 2 )
text = "Open-Sans"

[node name="Roboto" type="CheckBox" parent="CanvasLayer/Control/Center/pCon/VBox"]
margin_top = 114.0
margin_right = 111.0
margin_bottom = 141.0
group = ExtResource( 2 )
text = "Roboto"
